fix(typesetting): preserve cells when callback resolution fails